--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -139,7 +139,7 @@ footer{padding:50px 0}
 #lead-content a{padding:10px 20px}
 #lead-down{display:none}
 .education-block h3,.education-block span{float:none}
-.project-image{position:relative;margin:5px 0 20px 0;transform:none}
+.project-image{margin:5px 0 20px 0;transform:none}
 
 footer{text-align:center}
 .social{text-align:center}}
