--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,7 +89,7 @@ footer{padding:50px 0}
 .ID h3 {margin-top: 15px;margin-bottom: 10px;}
 .PG h3 {margin-top: 15px;margin-bottom: 10px;}
 .project {display:flex; justify-content:center; max-width: 1000px}
-.project-image{flex:1;text-align:center; margin:0 15px 15px 15px; width: 100%; height: 100%;}
+.project-image{flex:1;text-align:center; margin:0 15px 15px 15px; width: 100%; height: 100%;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)}
 .UX, .ID, .PG {margin: auto;}
 
 #skills{padding:50px 15px;text-align:center}
