--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,7 +50,7 @@ footer{padding:50px 0}
 .heading{position:relative;display:inline-block;font-size:2em;font-weight:300;margin:0 0 30px 0}
 .heading:after{position:absolute;content:'';top:100%;height:1px;width:50px;left:0;right:0;margin:0 auto;background:#3498db}
 .background-alt{background:#f2f2f5}
-#lead{position:relative;height:100vh;min-height:500px;max-height:1080px;background:url(../images/person.jpg);background-size:cover;padding:15px;overflow:hidden}
+#lead{position:relative;height:100vh;min-height:500px;max-height:1080px;background:url(../images/person-2.jpg);background-size:cover;padding:15px;overflow:hidden}
 #lead-content{position:absolute;z-index:10;top:50%;left:25%;transform:translate(-50%, -50%);text-align:center}
 #lead-content h1,#lead-content h2{margin:0}
 #lead-content h1{color:#374054;font-weight:900;font-size:5em;text-transform:uppercase;letter-spacing:0.05em;line-height:0.9em}
