--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,7 +143,12 @@ footer{padding:50px 0}
 #lead-content a{padding:10px 20px}
 #lead-down{display:none}
 .education-block h3,.education-block span{float:none}
-.project-image{margin:5px 0 20px 0}
+
+#projects .row {padding:0; margin:50px 20px;list-style:none;}
+.project-image{margin:5px 0 20px 0; position:relative; overflow:hidden;display:block;}
+.project-image a{padding:5px;display:inline-block;}
+.p-image {width:100%;height:auto;}
+.project-image:hover .p-image{transform:scale(1.1);}
 
 footer{text-align:center}
 #container h2{color:#374054;}
